docs/7.56/md/abenderived_types_abexas.md
---
title: "Examples for BDEF Derived Type Components"
description: |
  !Example(exa.gif 'Example') BDEF derived type components in the context of requesting permissions(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenderived_types_misc_abexa.htm) !Example(exa.gif 'Example') Display BDEF derived type components(https://help.sap.com/doc/abapdocu_75
version: "7.56"
category: "types"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenderived_types_abexas.htm"
abapFile: "abenderived_types_abexas.htm"
keywords: ["do", "if", "data", "types", "abenderived", "abexas"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) →  [ABAP for RAP Business Objects](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_for_rap_bos.htm) →  [Other RAP-Supporting ABAP Language Elements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_rap_other.htm) →  [ABAP for RAP, BDEF Derived Types](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrpm_derived_types.htm) →  [Components of BDEF Derived Types](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapderived_types_comp.htm) → 

Examples for BDEF Derived Type Components

Continue
![Example](exa.gif "Example") [BDEF derived type components in the context of requesting permissions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenderived_types_misc_abexa.htm)
![Example](exa.gif "Example") [Display BDEF derived type components](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_display_derived_type_abexa.htm)
![Example](exa.gif "Example") [Example for message-related BDEF derived type components](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenderived_types_reported_abexa.htm)
![Example](exa.gif "Example") [Using %cid / %cid\_ref](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenderived_types_cid_cidref_abexa.htm)
![Example](exa.gif "Example") [Using %control](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenderived_types_control_abexa.htm)
![Example](exa.gif "Example") [Using %data / %target](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenderived_types_data_abexa.htm)
![Example](exa.gif "Example") [Using %fail](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenderived_types_fail_abexa.htm)
![Example](exa.gif "Example") [Using %is\_draft](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenderived_types_isdraft_abexa.htm)
![Example](exa.gif "Example") [Using %key](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenderived_types_key_abexa.htm)
![Example](exa.gif "Example") [Using %pid](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenderived_types_pid_abexa.htm)
![Example](exa.gif "Example") [Using %pre / %tmp](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenderived_types_pre_tmp_abexa.htm)
![Example](exa.gif "Example") [Using %tky](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenderived_types_tky_abexa.htm)